# GuiAgentLoopCore

./: .bumpversion.cfg  .cruft.json  .gitmodules  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  makefile  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
docs/: Makefile  api.md  conf.py  index.rst  installation.md  installation.rst  make.bat  usage.md  usage.rst
docs/diagrams/: architecture.mmd
gui_agent_loop_core/: __init__.py  cli.py  docker-compose.yml  gui_agent_loop_core.py
gui_agent_loop_core/backend/: Dockerfile  app.py  requirements.txt  server_impl_common.py  server_impl_gradio.py
gui_agent_loop_core/backend/sandbox/: sandbox_server_impl_gradio.py
gui_agent_loop_core/connector_impl/core_to_agent/: connector_impl_codeinterpreter_api.py  connector_impl_open_interpreter.py
gui_agent_loop_core/converter/: base_converter.py  request_converter.py  request_converter_str.py  response_converter_str.py
gui_agent_loop_core/converter/dict_flattener/: __init__.py  content_dict_rule.py  conversion_rule.py  conversion_rule_checker.py  dict_flatten_converter.py  dict_flattener.py  mapping_rule.py
gui_agent_loop_core/core/: interpreter_manager.py
gui_agent_loop_core/frontend/: index.html
gui_agent_loop_core/rule_config/page_definitions/page2/: form1.yaml  root_element_relations.yaml
gui_agent_loop_core/schema/: schema.py
gui_agent_loop_core/schema/agent/: schema.py
gui_agent_loop_core/schema/backend/: schema.py
gui_agent_loop_core/schema/core/: schema.py
gui_agent_loop_core/schema/message/: schema.py
gui_agent_loop_core/util/: __init__.py  gui_agent_stream_wrapper.py  message_format.py  message_process.py
src/GuiAgentLoopCore/: GuiAgentLoopCore.py  __init__.py  cli.py
src/GuiAgentLoopCore/core/: interpreter_manager.py
src/GuiAgentLoopCore/libs/: server_impl_gradio.py
tests/: __init__.py  test_GuiAgentLoopCore.py  test_gui_agent_loop_core.py
tests/gui_agent_loop_core/backend/: test_gradio_integration.py  test_server_impl_gradio.py
tests/gui_agent_loop_core/converter/: mapping_rule.py  test_request_converter.py
tests/gui_agent_loop_core/converter/dict_flattener/: test_check_conversion_rules.py  test_content_dict_rule.py  test_dict_flatten_converter.py  test_dict_flattener.py  test_mapping_rule.py
tests/gui_agent_loop_core/util/: test_gui_agent_stream_wrapper.py
