[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GuiAgentLoopCore"
version = "0.1.0"
description = "Core logic of GUI and LLM agent bridge, including loop and controls."
readme = "README.rst"
authors = [
  {name = "Daisuke Jinno", email = "klvx01@gmail.com"}
]
maintainers = [
  {name = "Daisuke Jinno", email = "klvx01@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/jinno/GuiAgentLoopCore/issues"
changelog = "https://github.com/jinno/GuiAgentLoopCore/blob/master/changelog.md"
homepage = "https://github.com/jinno/GuiAgentLoopCore"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

